2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-08-20  Will Duquette  <will@wjduquette.com>

	* snitfaq.man: Finished up [SF Tcllib Bug 1658089].
	
2008-05-16  Andreas Kupries  <andreask@activestate.com>

	* snitfaq.man: Fixed the sectref argument order issues.

2008-05-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snitfaq.man: Updated to changes in doctools (sub)section
	  reference handling.

2007-12-04  Andreas Kupries  <andreask@activestate.com>

	* snit.test: Updated some results to changes in the Tcl 8.5
	  head. This fixes [SF Tcllib Bug 1844106], reported by Larry
	  Virden <lvirden@users.sourceforg.net>. Thanks.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* snit.test: Fixed bad indices in tests causing the generation of
	  bogus expected error messages.

2007-07-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* main1_83.tcl (::snit::Comp.statement.oncget): Fixed double
	* main1.tcl (::snit::Comp.statement.oncget): import of instance
	* main2.tcl (::snit::Comp.statement.oncget): and type variables.
	* snit.man: Bumped versions to 1.3.1 and 2.2.1 respectively.
	* pkgIndex.tcl:
	* snit.tcl:
	* snit2.tcl:

2007-07-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snit.test: Snit versions bumped to 1.3 and 2.2. Extended
	* snit.man: 'info' method and typemethod with sub-methods
	* snitfaq.man: 'args', 'body' and 'default' to query method
	* main1.tcl: arguments, argument defaults, and bodies.
	* main1_83.tcl:
	* main2.tcl:
	* pkgIndex.tcl:

2007-06-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
