@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin snit n 2.2.1]
+[manpage_begin snit n 2.2.2]
 [copyright {2003-2006, by William H. Duquette}]
 [moddesc {Snit's Not Incr Tcl, OO system}]
 [titledesc  {Snit's Not Incr Tcl}]
 [category  {Programming tools}]
 [require Tcl 8.5]
-[require snit [opt 2.2.1]]
+[require snit [opt 2.2.2]]
 [description]
 [para]
 
